# VkRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  main.cpp
common/shaders/: compile.bat  compile.sh  vertex.vert
engine/: application.cpp  application.hpp  command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  debugger.cpp  debugger.hpp  descriptor.cpp  descriptor.hpp  device.cpp  device.hpp  draw_command_buffer.cpp  draw_command_buffer.hpp  drawer.cpp  drawer.hpp  entry.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  instance.cpp  instance.hpp  logger.cpp  logger.hpp  physical_device.cpp  physical_device.hpp  render_pass.cpp  render_pass.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  surface.cpp  surface.hpp  swap_chain.cpp  swap_chain.hpp  texture_descriptor.hpp  ubo_descriptor.cpp  ubo_descriptor.hpp  validation_layers.cpp  validation_layers.hpp  (+2 more)
engine/buffers/: buffer.cpp  buffer.hpp  index_buffer.hpp  staging_buffer.hpp  uniform_buffer.hpp  vertex_buffer.cpp  vertex_buffer.hpp
engine/extra/: extra.hpp
engine/gui/: gui.cpp  gui.hpp  gui_render_pass.hpp  gui_renderer.hpp
engine/interface/: camera.hpp
engine/layers/: interface.cpp  interface.hpp  triangle.cpp  triangle.hpp
engine/layers/parent/: layer.hpp  layer_factory.hpp
engine/texture/: texture.cpp  texture.hpp  texture_descriptor.cpp  texture_descriptor.hpp
